# piano_midi_tdd

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: actions.yml  publish_dockerhub.yml
piano_midi_tdd/: frame.py  key.py
tests/: custom_strategies.py  test_frame_detect.py  test_key.py  test_utils.py  test_white_key.py  utils.py
