[tool.poetry]
name = "piano-midi-tdd"
version = "0.1.0"
description = "A new iteration of my piano tutorial to midi converter."
authors = ["Erik van Raalte"]
readme = "README.md"

[tool.poetry.dependencies]
python =  ">=3.10,<3.13"
yt-dlp = "^2023.7.6"
pytest = "^7.4.2"
opencv-python = "^4.8.0.76"
pytest-watch = "^4.2.0"
tqdm = "^4.66.1"
numpy = "^1.26.0"
scikit-learn = "^1.3.0"
matplotlib = "^3.8.0"
pre-commit = "^3.5.0"
hypothesis = "^6.88.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
